# ats-channel

./: .gitignore  CMakeLists.txt  Makefile  ats-channel.hats  conanfile.py  package.json
src/: ats-channel.hats
src/DATS/: channel.dats
src/HATS/: includes.hats
src/SATS/: channel.sats
tests/: CMakeLists.txt  Makefile  conanfile.py  main.dats  tests.dats
