CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
PROJECT (ATSAPP C)
FIND_PACKAGE (ATS REQUIRED)
FIND_PACKAGE (Threads REQUIRED)
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR ”ATS Not Found!”)
ENDIF ()
ATS_INCLUDE (src/SATS src/DATS src/HATS)
set(CMAKE_C_FLAGS "-DATS_MEMALLOC_LIBC -D_BSD_SOURCE -D_DEFAULT_SOURCE")
ATS_COMPILE (TEST_SRC
	src/SATS/channel.sats
	src/DATS/channel.dats
	)
ADD_LIBRARY(ats-channel ${TEST_SRC})