CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
ADD_SUBDIRECTORY(.. build)
PROJECT (ATSAPPTEST C)
FIND_PACKAGE (ATS REQUIRED)
FIND_PACKAGE (Threads REQUIRED)
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR ”ATS Not Found!”)
ENDIF ()
ATS_INCLUDE (.)
set(CMAKE_C_FLAGS "-DATS_MEMALLOC_LIBC -D_BSD_SOURCE -D_DEFAULT_SOURCE")
ATS_COMPILE (TEST_SRC
	main.dats
	)
ADD_EXECUTABLE(main ${TEST_SRC})
target_link_libraries(main pthread atslib ats-concurrency)